--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		}
 
 		body{
+			
 			background-color: lightgrey;
 			font-family: Calibri;
 			font-size: 20px;
@@ -29,7 +30,7 @@
 
 	<div class="wrapper">
 		<div class="contents">
-			<h1>Lorem Ipsum</h1>
+			<h1>hello world</h1>
 			<img src="https://picsum.photos/600/300" alt="lorem-alt">
 		</div>
 	</div>
